feat: first simple merging
