# backend/app/main.py
@@ -3,6 +3,7 @@ from fastapi.middleware.cors import CORSMiddleware
 from model import PDF_Model
 from services.upload_service import upload_file
 from services.thumbnail_service import get_all_thumbnails_for_file
+from services.merge_service import merge_pdfs
 
 app = FastAPI()
 
@@ -18,3 +19,4 @@ app.add_middleware(
 
 app.post("/upload")(upload_file)
 app.get("/thumbnails/{file_id}")(get_all_thumbnails_for_file)
+app.post("/merge")(merge_pdfs)
