# backend/app/model.py
@@ -1,14 +1,23 @@
-from PyPDF2 import PdfReader
+from PyPDF2 import PdfReader, PdfWriter
 from pdf2image import convert_from_path
 import base64
 from io import BytesIO
 import os
+from pydantic import BaseModel
+from typing import List
+
+class FilePages(BaseModel):
+    file_id: str
+    pages: List[int]
+
+class MergePDFRequest(BaseModel):
+    files: List[FilePages]
 
 class PDF():
     def __init__(self, id, path):
         self._id = id
         self._path = path
-        self._pages = []
+        self._pages = [] #TODO: Def Type here
         self._thumbnails = []
 
     def set_path(self, path):
@@ -22,6 +31,9 @@ class PDF():
 
     def get_pages(self):
         return self._pages
+    
+    def get_page(self, page_number):
+        return self._pages[page_number]
     
     def add_thumbnail(self, thumbnail):
         self._thumbnails.append(thumbnail)
@@ -63,6 +75,24 @@ class PDF_Model():
             return thumbnails
         except Exception as e:
             print(f"An error occurred while trying to make the thumbnails: {e}")
+
+    
+    def merge_selected_pages(self, file_and_pages: List[FilePages] , output_file_path = "merged_output.pdf"):
+        writer = PdfWriter()
+        
+        # Get pdf and needed pages
+        for file_and_page in file_and_pages:
+            if isinstance(file_and_page, FilePages):
+                print(f"file_and_page: {file_and_page}")
+                pdf = self.get_pdf(file_and_page.file_id)
+                for page_number in file_and_page.pages:
+                    writer.add_page(pdf.get_page(page_number))
+            else:
+                print(f"Invalid type for file_and_page: {type(file_and_page)}")
+
+        with open(output_file_path, "wb") as f:
+            writer.write(f)
+                
 
     def get_pdf(self, file_id):
         for pdf in self._pdfs:
